--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body class="">
-    <h1>DARK MODE</h1>
-    <button class="btn">Cambiar tema</button>
+    <div class="modeWrapper">
+        <h1>DARK MODE CLOCK</h1>
+        <button class="btn">Cambiar tema</button>
+    </div>
     <div class="wrap">
         <div class="widget">
             <div class="fecha">
@@ -33,4 +37,5 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 </html>
